# sirula

./: Cargo.toml
src/: app_entry.rs  config.rs  locale.rs  main.rs  util.rs
