[package]
name = "sirula"
version = "1.0.2"
authors = ["Dorian Rudolph"]
edition = "2018"

[dependencies]
freedesktop_entry_parser = "1.3"
libc = "0.2"
gtk-layer-shell = "0.8"
gtk = { version = "0.18", features = ["v3_24"] }
gio = { version = "0.18", features = ["v2_60"] }
gdk = "0.18"
pango = { version = "0.18", features = ["v1_44"] }
gdk-pixbuf = "0.18"
glib = "0.18"
futures = "0.3"
fuzzy-matcher = "0.3"
xdg = "2.5"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"  # Strange failures in Config::Load() with 0.6 and up, to investigate.
regex = "1.10"
osstrtools = {git = "https://github.com/Artturin/osstrtools.git", rev="6360f4f842eb542ff4e62e75851ea8ba83808471"}

[profile.release]
lto = true
